--- a/lang/zh-Hans.json
+++ b/lang/zh-Hans.json
@@ -11,7 +11,7 @@
   "footer": {
     "github": "GitHub",
     "terms": "服务条款",
-    "privacy": "隐私协议"
+    "privacy": "隐私政策"
   },
   "pages": {
     "home": {
@@ -21,7 +21,7 @@
       "title": "服务条款"
     },
     "privacy": {
-      "title": "隐私协议"
+      "title": "隐私政策"
     }
   }
 }
