--- a/lang/zh-Hans.json
+++ b/lang/zh-Hans.json
@@ -17,6 +17,13 @@
     "terms": "服务条款",
     "privacy": "隐私政策"
   },
+  "pagination": {
+    "first": "第一页",
+    "prev": "上一页",
+    "page": "第{page}页",
+    "next": "下一页",
+    "last": "最后一页"
+  },
   "pages": {
     "projects": {
       "title": "项目列表",
@@ -25,7 +32,8 @@
       "sortType": {
         "name": "名称",
         "newest": "最新"
-      }
+      },
+      "noResult": "没有找到符合条件的项目。"
     },
     "authors": {
       "title": "作者列表"
