--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -30,6 +30,9 @@
     },
     "projectRequirements": {
       "title": "Min. Req."
+    },
+    "projectHeader": {
+      "download": "Download Latest"
     }
   },
   "sortTypes": {
@@ -39,7 +42,8 @@
   "error": {
     "401": "Unauthorized",
     "403": "Forbidden",
-    "404": "Not Found"
+    "404": "Not Found",
+    "unknown": "Unknown Error"
   },
   "pages": {
     "projects": {
@@ -64,6 +68,12 @@
       "numProjects": "{num} Project(s)",
       "searchName": "Search in projects...",
       "sortBy": "Sort by"
+    },
+    "repo": {
+      "title": "{repo}"
+    },
+    "project": {
+      "title": "{name} ({branch})"
     }
   }
 }
