--- a/lang/zh-Hans.json
+++ b/lang/zh-Hans.json
@@ -47,6 +47,12 @@
       "builds": "所有构建",
       "issues": "问题追踪器",
       "source": "源代码"
+    },
+    "projectBuilds": {
+      "noResult": "没有任何构建。"
+    },
+    "projectBuildCard": {
+      "build": "构建 #{build}"
     }
   },
   "sortTypes": {
@@ -96,7 +102,11 @@
       "authors": "作者"
     },
     "builds": {
-      "title": "所有构建 - {name} ({branch})"
+      "title": "所有构建 - {name} ({branch})",
+      "notFound": "没有可用的构建"
+    },
+    "build": {
+      "title": "构建 #{build} - {name} ({branch})"
     }
   }
 }
