--- a/lang/zh-Hans.json
+++ b/lang/zh-Hans.json
@@ -113,6 +113,8 @@
       "logs": "日志",
       "download": "下载构建",
       "commitAt": "{author} 于 {time} 提交",
+      "checksum": "校验和",
+      "checksumLink": "验证",
       "warning": {
         "title": "警告",
         "content": "你正在从鬼斩构建站下载。如果你继续，则代表你已经同意了服务条款与隐私政策。",
