--- a/lang/zh-Hans.json
+++ b/lang/zh-Hans.json
@@ -159,6 +159,7 @@
         "query": "验证订单",
         "download": "下载开发版构建",
         "error": {
+          "malformedOrderId": "订单号格式不正确",
           "invalidOrderId": "订单不存在或已过期",
           "cannotGetLink": "无法获取下载链接，请稍后再试"
         },
