--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -158,11 +158,12 @@
       "footnotes": "The prices listed on this page are just for reference, the actual price in Afdian shall prevail.",
       "devCheck": {
         "title": "Get the latest development build",
-        "description": "Provide a valid Afdian order number, you will have access to the latest development build after validation. Find your order number by Afdian Avatar - Orders.",
-        "navigateToOrders": "Navigate to Afdian Orders",
+        "description": "Provide an Afdian order number, you will have access to the latest development build after validation.",
+        "navigateToOrders": "Find my Afdian Orders",
         "label": "Afdian Order No.",
         "query": "Validate",
         "download": "Download Dev. Build",
+        "notice": "If the file extension is zip, please manually change it to jar.",
         "lastUpdate": "Last updated on {time}",
         "error": {
           "malformedOrderId": "Invalid order number format",
