feat(sub): implement cache

--- a/lang/zh-Hans.json
+++ b/lang/zh-Hans.json
@@ -164,6 +164,7 @@
         "query": "验证订单",
         "download": "下载开发版构建",
         "lastUpdate": "最后更新于 {time}",
+        "noUpdate": "距离上次下载暂无更新",
         "error": {
           "malformedOrderId": "订单号格式不正确",
           "invalidOrderId": "订单不存在或已过期",
