feat(wiki): Add wiki in project nav

--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -40,7 +40,8 @@
 			"introduction": "Introduction",
 			"builds": "Builds",
 			"issues": "Issues",
-			"source": "Source"
+			"source": "Source",
+			"wiki": "Wiki"
 		},
 		"projectBuilds": {
 			"noResult": "No results found."
