feat: support display last update commit info

--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -166,6 +166,7 @@
 				"query": "Validate",
 				"download": "Download Insider Build",
 				"lastUpdate": "Last updated on {time}",
+				"updateInfo": "Latest commit log {changelog}",
 				"noUpdate": "No updates since last download.",
 				"error": {
 					"malformedOrderId": "Invalid order number format",
