--- a/lang/zh-Hans.json
+++ b/lang/zh-Hans.json
@@ -26,6 +26,10 @@
 			"next": "下一页",
 			"last": "最后一页"
 		},
+		"markdownContent": {
+			"loading": "内容加载中...",
+			"error": "无法加载内容。"
+		},
 		"projectList": {
 			"noResult": "没有找到符合条件的项目。"
 		},
