feat(lastUpdate): add last updated sort

--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -56,7 +56,8 @@
 	},
 	"sortTypes": {
 		"name": "Name",
-		"newest": "Recently Added"
+		"newest": "Recently Added",
+		"updated": "Recently Updated"
 	},
 	"error": {
 		"401": "Unauthorized",
