--- a/lang/zh-Hans.json
+++ b/lang/zh-Hans.json
@@ -56,7 +56,8 @@
 	},
 	"sortTypes": {
 		"name": "名称",
-		"newest": "最近添加"
+		"newest": "最近添加",
+		"updated": "最近更新"
 	},
 	"error": {
 		"401": "未授权",
